infra/k8s/core/40-service-core.yaml
apiVersion: v1
kind: Service
metadata:
  name: aga
  namespace: aga
spec:
  type: NodePort
  selector:
    app: aga-core
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
