infra/k8s/core/60-service-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: aga
spec:
  type: NodePort
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30081
